将自动检测局域网地址改为手动输入

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,9 +14,7 @@
     <div class="card">
         <h3>外网/局域网访问地址（可选）</h3>
         <p style="font-size:13px;color:#666">如果手机无法访问 localhost，请填写电脑在局域网中的可访问地址或 ngrok 的公网地址，例如： http://192.168.1.100:8080 或 https://xxxxx.ngrok-free.dev</p>
-        <input id="baseUrl" placeholder="示例： http://192.168.1.100:8080 或 https://xxxx.ngrok-free.dev" style="width:60%">
-        <button id="detectNgrokBtn" style="margin-left:8px" onclick="detectNgrok()">检测并填充局域网地址</button>
-        <span id="detectNgrokStatus" style="margin-left:8px;color:#666"></span>
+        <input id="baseUrl" placeholder="示例： http://192.168.1.100:8080 或 https://xxxx.ngrok-free.dev（请手动填写）" style="width:60%">
     </div>
 
     <div class="card">
