--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
 
     <div class="card" id="payArea" style="display:none">
         <h2>扫码支付</h2>
-        <img id="qrImg" src="/qrcode.png" width="180">
+        <img id="qrImg" src="" width="180" style="display:none">
         <br><br>
         <button onclick="pay()">模拟支付</button>
         <p id="payMsg" style="color:green;font-weight:bold"></p>
